--- a/FarmMonitor.vcproj
+++ b/FarmMonitor.vcproj
@@ -4,6 +4,7 @@
 	Version="9.00"
 	Name="FarmMonitor"
 	ProjectGUID="{6609D72E-4FDE-403D-A286-004013C03E67}"
+	RootNamespace="FarmMonitor"
 	Keyword="Win32Proj"
 	TargetFrameworkVersion="131072"
 	>
@@ -63,6 +64,7 @@
 			/>
 			<Tool
 				Name="VCResourceCompilerTool"
+				PreprocessorDefinitions="_DEBUG"
 				AdditionalIncludeDirectories="../Lib"
 			/>
 			<Tool
@@ -143,6 +145,7 @@
 			/>
 			<Tool
 				Name="VCResourceCompilerTool"
+				PreprocessorDefinitions="NDEBUG"
 				AdditionalIncludeDirectories="../Lib"
 			/>
 			<Tool
@@ -184,18 +187,23 @@
 	<References>
 		<ProjectReference
 			ReferencedProjectIdentifier="{790BC113-52FB-4565-8968-79B8B011C520}"
+			RelativePathToProject="..\Lib\Core\Core.vcproj"
 		/>
 		<ProjectReference
 			ReferencedProjectIdentifier="{FAB8D717-85EC-4896-B5DC-FDF0A0B67C92}"
+			RelativePathToProject="..\Lib\NCL\NCL.vcproj"
 		/>
 		<ProjectReference
 			ReferencedProjectIdentifier="{9B0335B6-93BE-4604-8497-27431874D758}"
+			RelativePathToProject="..\Lib\WCL\Wcl.vcproj"
 		/>
 		<ProjectReference
 			ReferencedProjectIdentifier="{6497EA41-2782-4A79-8840-6854E22EC4F4}"
+			RelativePathToProject="..\Lib\WMI\WMI.vcproj"
 		/>
 		<ProjectReference
 			ReferencedProjectIdentifier="{2BF56C15-FDAD-480B-9C25-951E43773ED6}"
+			RelativePathToProject="..\Lib\XML\XML.vcproj"
 		/>
 	</References>
 	<Files>
